--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-multi-date-picker": "^3.3.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
